--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>预约签到</title>
+    <title>预约签到 - eportal.hnu.edu.cn</title>
     <style>
         html {  /* 页面样式 */
             font-size: 12px;  /* 字体大小 */
