--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0;url=./entrance.html">
-    <title>预约签到</title>
+    /* <meta http-equiv="refresh" content="0;url=./entrance.html"> */
+    <title>预约签到</title> -->
     <style>
         html {  /* 页面样式 */
             font-size: 16px;  /* 字体大小 */
